--- a/pwap/templates/learner_home.html
+++ b/pwap/templates/learner_home.html
@@ -1,32 +1,44 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Learner landing page
+Learner Dashboard
 {% endblock title %}
 
 {% block content %}
-
-     <h1 id="client-home-title">Learner dashboard</h1>
-     <div id="learner-dashboard">
-          <div class="learner-dashboard-pane col-md-6">
-               <h3>Learning modules</h3>
-               <div class="learner-dashboard-pane-content">
-                    <h4>Completed: 6</h4>
-                    <h4>In progress: 3</h4>
-                    <h4>Available: 12</h4>
-                    <a href="modules"><button type="button" class="btn btn-primary btn-lg">Go to learning modules</button></a>
-               </div>
-          </div>
-          <div class="learner-dashboard-pane col-md-6">
-               <h3>Mockups</h3>
-               <div class="learner-dashboard-pane-content">
-                    <h4>Completed: 4</h4>
-                    <h4>In progress: 1</h4>
-                    <h4>Available: 28</h4>
-                    <a href="select"><button type="button" class="btn btn-primary btn-lg">Go to mockups</button></a>
-               </div>
-          </div>
-     </div>
+<div class="page-header">
+  <h1>Learner Dashboard</h1>
+</div>
+<div class="row">
+  <div class="col-md-4 col-md-offset-2">
+    <div class="panel panel-default text-center">
+      <div class="panel-heading">
+        <h3 class="panel-title">Learning modules</h3>
+      </div>
+      <div class="panel-body">
+        <h4>Completed: 6</h4>
+        <h4>In progress: 3</h4>
+        <h4>Available: 12</h4>
+      </div>
+      <div class="list-group">
+        {% for module in modules %}
+          <a href="/learner/modules/{{ module.id }}" class="list-group-item">{{ module.title }}</a>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-default text-center">
+      <div class="panel-heading">
+        <h3 class="panel-title">Mockups</h3>
+      </div>
+      <div class="panel-body">
+        <h4>Completed: 6</h4>
+        <h4>In progress: 3</h4>
+        <h4>Available: 12</h4>
+        <a href="select" class="btn btn-primary btn-lg">Go to mockups</a>
+      </div>
+  </div>
+</div>
 
 
 {% endblock content %}
