--- a/pwap/templates/module_1.html
+++ b/pwap/templates/module_1.html
@@ -8,7 +8,7 @@ Module 1: Fonts and colors
  <div class="container">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h2 class="panel-title">Module 1: Fonts and colors</h2>
+            <h2 class="panel-title">Module 1: Borders</h2>
         </div>
         <div class="panel-body">
             <div class="row">
@@ -17,55 +17,44 @@ Module 1: Fonts and colors
                     <code>{{ '<html><head><style type="text/css">' }}</code>
                     <div id="cssEditor"></div>
                     <code>{{ "</style></head>" }}</code>
-                    <h4>HTML</h4>
-                    <code>{{ "<body>" }}</code>
-                    <div id="htmlEditor">&lt;div&gt;Hello, world!&lt;/div&gt;</div>
-                    <code>{{ "</body></html>" }}</code>
+                    <div style="display: none;">
+                        <h4>HTML</h4>
+                        <code>{{ "<body>" }}</code>
+                        <div id="htmlEditor">&lt;span&gt;Let's give this span a border!&lt;/span&gt;</div>
+                        <code>{{ "</body></html>" }}</code>
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <h4>Goal:</h4>
-                    <img id="mock" class="hide" data-src="/static/img/module_1.png"
-                        data-xorigin="0"
-                        data-yorigin="0"
-                        data-width="150"
-                        data-height="17"
-                        data-design="0" >
-                    <canvas id="mycanvas" width="150" height="17">Your browser does not support HTML5 Canvas</canvas>
-                    <h4>Preview</h4>
-                    <img id="preview">
-                    <h4>Diff (<span id="diffPercent"></span>%)</h4>
-                    <img id="diff">
-                    <button id="landing-login" type="button" class="btn btn-primary btn-md btn-help" data-toggle="modal" data-target="#help-modal">
-                      Help!
-                    </button>
-                    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                              <h4 class="modal-title" id="help-modalLabel">Help</h4>
-                            </div>
-                            <div class="modal-body">
-                                <div class="help-step-1">
-                                    <p>To start writing the CSS, we need a selector that says what kind of element we want to style. Here our only element is a div, so we'll select the div by writing
-                                    div {
+                    <div role="tabpanel">
 
-                                    }.</p>
-                                </div>
-                                <div class="help-step-2">
-                                    <p>Now we need to start writing rules inside our selector. First, let's look at font. The font in the goal image is Courier. To make our font courier, add this rule: font-family: Courier;</p>
-                                </div>
-                                <div class="help-step-3">
-                                    <p>Finally, let's add the colors. In the goal image, the text is white and the background is red. To make the text white, add this rule: color: white;. To make the background red, add this rule: background-color: red;</p>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-info">Show me</button>
-                              <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
-                            </div>
-                          </div>
+                      <!-- Nav tabs -->
+                      <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#tab-preview" aria-controls="tab-preview" role="tab" data-toggle="tab">Preview</a></li>
+                        <li role="presentation"><a href="#tab-goal" aria-controls="tab-goal" role="tab" data-toggle="tab">Goal</a></li>
+                        <li role="presentation"><a href="#tab-src-html" aria-controls="tab-src-html" role="tab" data-toggle="tab">Source HTML</a></li>
+                      </ul>
+
+                      <!-- Tab panes -->
+                      <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="tab-preview">
+                            <img id="preview">
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="tab-goal">
+                            <img id="mock" class="hide" data-src="/static/img/module_1.png"
+                                                data-xorigin="0"
+                                                data-yorigin="0"
+                                                data-width="150"
+                                                data-height="17"
+                                                data-design="0" >
+                                                <canvas id="mycanvas" width="193" height="27">Your browser does not support HTML5 Canvas</canvas>
+
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="tab-src-html">
+                            <img id="diff">
                         </div>
                       </div>
+
+                    </div>
                       <div class="modal fade" id="intro-modal" tabindex="-1" role="dialog" aria-labelledby="intro-modalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                           <div class="modal-content">
