--- a/pwap/templates/base.html
+++ b/pwap/templates/base.html
@@ -30,10 +30,10 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-readable.min.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-spacelab.min.css') }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" />
-  <title>{% block title %}{% endblock %}</title>
+  <title>{% block title %}Title{% endblock %}</title>
   <script type=text/javascript>
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
   </script>
