tiny tweaks to template files, add logging, update editor to use amazon instance, etc

--- a/pwap/templates/edit_element.html
+++ b/pwap/templates/edit_element.html
@@ -34,7 +34,7 @@ Learner edit
                     Your browser does not support HTML5 Canvas
                 </canvas>
                 <h4>Preview</h4>
-                <img id="preview" width="{{ element.width }}", height="{{ element.height }}">
+                <canvas id="preview" width="{{ element.width }}", height="{{ element.height }}"></canvas>
                 <h4>Diff (<span id="diffPercent"></span>%)</h4>
                 <img id="diff" width="{{ element.width }}", height="{{ element.height }}">
             </div>
