--- a/pwap/templates/learner_module.html
+++ b/pwap/templates/learner_module.html
@@ -51,7 +51,7 @@
             <div id="tab-goal" role="tabpanel" class="tab-pane"><canvas width="400" height="400"></canvas></div>
             <div id="tab-src-html" role="tabpanel" class="tab-pane"><pre></pre></div>
             <div id="tab-hints" role="tabpanel" class="tab-pane">
-              <div id="get-hint" class="btn btn-info pull-right">Get Hint (<span id="hints-remaining">0</span> remaining)</div>
+              <div id="get-hint" class="btn btn-info">Get Hint (<span id="hints-remaining">0</span> remaining)</div>
               <div id="hints"></div>
             </div>
           </div>
