--- a/pwap/static/css/main.css
+++ b/pwap/static/css/main.css
@@ -34,8 +34,21 @@ h4 {
 }
 
 #mycanvas, #preview, #diff {
+	position: absolute;
     border: 2px inset;
-    margin: 0 20px;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.learner-edit-form .form-group {
+	margin-left: 20px;
+}
+
+.learner-edit-form .form-group:first-child {
+	margin-left: 0;
 }
 
 /* Client homepage */
