--- a/pwap/templates/learner_home.html
+++ b/pwap/templates/learner_home.html
@@ -15,13 +15,17 @@ Learner Dashboard
         <h3 class="panel-title">Learning modules</h3>
       </div>
       <div class="panel-body">
-        <h4>Completed: 6</h4>
-        <h4>In progress: 3</h4>
-        <h4>Available: 12</h4>
+        <h4>Completed: {{ completed }}</h4>
+        <h4>Available: {{ not_done }}</h4>
       </div>
       <div class="list-group">
         {% for module in modules %}
-          <a href="/learner/modules/{{ module.id }}" class="list-group-item">{{ module.title }}</a>
+          {% if module[1] == 1 %}
+            <a href="/learner/modules/{{ module.id }}" class="disabled list-group-item list-group-item-success">{{ module[0].title }} - Completed!!</a>
+          {% else %}
+            <a href="/learner/modules/{{ module[0].id }}" class="list-group-item list-group-item-info">{{ module[0].title }}</a>
+
+          {% endif %}
         {% endfor %}
       </div>
     </div>
