--- a/pwap/templates/learner_home.html
+++ b/pwap/templates/learner_home.html
@@ -36,10 +36,16 @@ Learner Dashboard
         <h3 class="panel-title">Mockups</h3>
       </div>
       <div class="panel-body">
-        <h4>Completed: 6</h4>
-        <h4>In progress: 3</h4>
-        <h4>Available: 12</h4>
-        <a href="select" class="btn btn-primary btn-lg">Go to mockups</a>
+        <h4>Completed: {{ 1 - locked }}</h4>
+        <h4>Available: 1</h4>
+      </div>
+      <div class="list-group">
+          {% if locked == 1 %}
+            <a href="learner/edit/49" class="disabled list-group-item">Box Model Mockup - Please finish all 5 learning modules prior</a>
+          {% else %}
+            <a href="learner/edit/49" class="list-group-item">
+            Box Model Mockup</a>
+          {% endif %}
       </div>
   </div>
 </div>
