prepping to begin user testing. add main mockup, hacks to support this main mockup (hard-coding background color). etc

--- a/pwap/templates/uploadForm.html
+++ b/pwap/templates/uploadForm.html
@@ -21,7 +21,7 @@ Upload Form
         </div>
         <div class="panel-body">
             <img id="myimg" class="hide">
-            <canvas id="mycanvas">Your browser does not support HTML5 Canvas</canvas>
+            <canvas id="mycanvas" style="position: relative; display: block; margin: 0 auto;">Your browser does not support HTML5 Canvas</canvas>
         </div>
         <div class="panel-footer">
             <div class="row">
