--- a/pwap/templates/preview.html
+++ b/pwap/templates/preview.html
@@ -4,11 +4,14 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
 {% if css %}
 <style type="text/css">
+    body {
+        background-color: white;
+    }
     {{ css }}
 </style>
 {% endif %}
 </head>
-<body style="background-color: white;">
+<body>
 {% if html %}
 {{ html|safe }}
 {% endif %}
