--- a/pwap/templates/base.html
+++ b/pwap/templates/base.html
@@ -31,6 +31,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-spacelab.min.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/introjs.min.css') }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" />
   <title>{% block title %}Title{% endblock %}</title>
