override option when the user has the correct answer

--- a/pwap/templates/learner_module.html
+++ b/pwap/templates/learner_module.html
@@ -22,7 +22,7 @@
             <div id="status" class="alert alert-info" style="display: none;"><strong>Status: </strong><span>Empty</span></div>
           </div>
           <div class="col-md-6">
-            <div id="check-answer" class="btn btn-primary btn-block btn-lg" data-intro="When you're finished click here (wait a few seconds after you finish typing before clicking).">Check Answer</div>
+            <div id="check-answer" class="btn btn-primary btn-block btn-lg" data-intro="Click here to check your answer.">Check Answer</div>
             <a id="next-task" class="btn btn-success btn-block btn-lg" style="display: none;">Next Task</a>
           </div>
         </div>
